<resources>
    <string name="app_name">GamesApp</string>
    <string name="search_games">Search Games</string>
    <string name="information">Information</string>
    <string name="relaese_date">Relaese Date :</string>
    <string name="play_time">Play Time :</string>
    <string name="publishers">Publishers :</string>
    <string name="descriptions">Descriptions</string>
    <string name="genres">Genres :</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>