<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        tools:context=".ui.DetailActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/headerImageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic[7]" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headerImageView"
            tools:text="Morty Smith" />

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/platforms"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            app:layout_constraintStart_toStartOf="@id/nameTextView"
            app:layout_constraintTop_toBottomOf="@id/nameTextView"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="290dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/platformXbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:scaleType="fitXY"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_xboxone" />

            <ImageView
                android:id="@+id/platformPlaystation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:scaleType="fitXY"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_playstation" />

            <ImageView
                android:id="@+id/platformSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:scaleType="fitXY"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_switch" />

            <ImageView
                android:id="@+id/platformMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:scaleType="fitXY"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_mobile" />

            <ImageView
                android:id="@+id/platformAtari"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:scaleType="fitXY"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_atari" />

            <ImageView
                android:id="@+id/platformWindows"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:scaleType="fitXY"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_windows" />

            <ImageView
                android:id="@+id/platformAmiga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:scaleType="fitXY"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_amiga" />

            <ImageView
                android:id="@+id/platformSega"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:scaleType="fitXY"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_sega" />

            <ImageView
                android:id="@+id/platformAndroid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:scaleType="fitXY"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_android" />

            <ImageView
                android:id="@+id/platformLinux"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:scaleType="fitXY"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_linux" />
        </androidx.gridlayout.widget.GridLayout>

        <View
            android:id="@+id/divider"
            style="@style/Divider"
            android:layout_margin="15dp"
            app:layout_constraintStart_toStartOf="@id/platforms"
            app:layout_constraintTop_toBottomOf="@id/platforms" />


        <androidx.cardview.widget.CardView
            android:id="@+id/information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/card_back"
            app:layout_constraintStart_toStartOf="@id/divider"
            app:layout_constraintTop_toBottomOf="@id/divider"
            card_view:cardCornerRadius="12dp"
            card_view:cardElevation="6dp"
            card_view:layout_columnWeight="1"
            card_view:layout_rowWeight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/informationTextLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/information"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="italic" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/relaese"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/informationTextLabelTextView"
                    android:layout_alignParentStart="true"
                    android:text="@string/relaese_date"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/relaeseTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/informationTextLabelTextView"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:text="Earth" />

                <View
                    style="@style/Divider"
                    android:layout_below="@id/relaese" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/genres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relaese"
                    android:layout_alignParentStart="true"
                    android:text="@string/genres"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/genresTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/relaese"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:text="Earth" />

                <View
                    style="@style/Divider"
                    android:layout_below="@id/genres" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/playtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/genres"
                    android:layout_alignParentStart="true"
                    android:text="@string/play_time"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/playtimeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/genresTextView"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:text="Earth" />

                <View
                    style="@style/Divider"
                    android:layout_below="@id/playtime" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/publishers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/playtime"
                    android:layout_alignParentStart="true"
                    android:text="@string/publishers"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/publishersTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/playtimeTextView"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:text="Earth" />

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/card_back"
            app:layout_constraintStart_toStartOf="@id/information"
            app:layout_constraintTop_toBottomOf="@id/information"
            card_view:cardCornerRadius="12dp"
            card_view:cardElevation="6dp"
            android:layout_marginBottom="40dp"
            card_view:layout_columnWeight="1"
            card_view:layout_rowWeight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/descriptionTextLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descriptions"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="italic" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/descriptionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/descriptionTextLabelTextView"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    tools:text="Description" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>